Account for memory cache in DocumentThreadableLoader::didReceiveResponse assertion https://bugs.webkit.org/show_bug.cgi?id=182049

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-24
Reviewed by Chris Dumez.

No change of behavior.
A response served from Service Worker may be cached in Memory Cache and reused later on.
Update DTL assertion to handle that case.

* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::didReceiveResponse):

Canonical link: https://commits.webkit.org/197882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227530 268f45cc-cd09-0410-ab3c-d52691b4dbfc